# xcube-gedidb

./: CHANGES.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES  environment.yml  pyproject.toml
.github/workflows/: publish_pypi.yml  unittest.yml
examples/notebooks/: gedi_data_store.ipynb  gedi_data_store_bbox.ipynb  gedi_data_store_point.ipynb
test/: test_store.py  test_utils.py
test/cassettes/test_store/: GediDbDataStoreTest.test__get_gedi_metadata_exception.yaml  GediDbDataStoreTest.test__get_gedi_metadata_success.yaml
xcube_gedi/: __init__.py  constant.py  plugin.py  store.py  utils.py
xcube_gedidb/: constant.py  plugin.py  store.py  utils.py  version.py
